--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .header {
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),url(images/imamuu.jpeg.jpg);
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(images/imamuu.jpeg.jpg);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -128,13 +128,13 @@ nav {
         flex-direction: column;
     }
 
-    
+
 }
 
 
 
 .login-form {
- 
+
     background-color: #ffffffa1;
     position: absolute;
     top: 40%;
@@ -144,36 +144,36 @@ nav {
     height: 200px;
     border: none;
     text-align: center;
- 
+
 
 
 }
 
 
-.title h2{
+.title h2 {
     color: #8d6669;
     margin-bottom: 30px;
     text-align: center;
     margin-top: 10px;
-    
+
 
 }
 
 .input-group {
-    color:#8d6669;
+    color: #8d6669;
     top: 50%;
     left: 50%;
-   
-    
+
+
 }
 
 
 .input-group label {
     display: inline-block;
-   text-align: right;
-   margin-left: 85px;
-   font-size: 14px;
-   
+    text-align: right;
+    margin-left: 85px;
+    font-size: 14px;
+
 }
 
 .input-group {
@@ -182,8 +182,8 @@ nav {
     text-align: center;
     top: 50%;
     left: 50%;
-   margin-bottom: 2%;
-   
+    margin-bottom: 2%;
+
 }
 
 .input-group p {
@@ -199,12 +199,12 @@ nav {
 .reset {
     flex: 1;
     text-align: right;
-   margin-right: 80px;
+    margin-right: 80px;
 }
 
 .reset ul li {
     display: inline-block;
-   
+
     position: relative;
 }
 
@@ -218,7 +218,7 @@ nav {
     content: '';
     width: 0%;
     height: 2px;
-    background:#8d6669;
+    background: #8d6669;
     display: block;
     margin: auto;
     transition: 0.5s;
@@ -229,19 +229,19 @@ nav {
 }
 
 
-#password{
+#password {
     width: 80%;
     padding: 2%;
     text-align: right
 }
 
-#password::placeholder{
+#password::placeholder {
     font-size: 12px;
- 
+
 }
 
 #submit {
-   
+
     width: 65%;
     text-decoration: none;
     color: #fff;
@@ -249,11 +249,11 @@ nav {
     padding: 5px;
     font-size: 15px;
     background: transparent;
-    position:relative;
+    position: relative;
     cursor: pointer;
     margin-top: 10px;
-    
-   
+
+
 
 }
 
@@ -261,14 +261,15 @@ nav {
     border: 1px solid #8d6669;
     background: #8d6669;
     transition: 1s;
-   
+
 }
 
-@media (max-width:700px){
-    .login-form{
+@media (max-width:700px) {
+    .login-form {
         flex-direction: column;
     }
-    .input-group{
+
+    .input-group {
         flex-direction: column;
     }
 }
@@ -279,7 +280,7 @@ nav {
     height: 290px;
     position: relative;
     display: block;
- 
+
     Left: 50%;
     transform: translate(-50%, -50%);
     background-color: #0e0202a1;
@@ -378,7 +379,7 @@ nav {
 
 .profile button {
 
-    
+
     background: transparent;
     color: #f2f2f2;
     padding: 5px 10px;
@@ -452,8 +453,9 @@ nav {
     position: relative;
     margin-right: 5px;
     margin-top: 5px;
-    
+
 }
+
 .box1 {
     margin-top: 250px;
     width: 290px;
@@ -474,36 +476,39 @@ nav {
     color: #8d6669;
     margin-bottom: 15px;
 }
-.p5{
+
+.p5 {
     margin-bottom: 15px;
     margin-top: 15px;
     color: #8d6669;
-   
-}
-.p4{
-    margin-bottom: 15px;
-    margin-top: 15px;
-    color: #8d6669;
-   
+
 }
 
-.p3{
+.p4 {
     margin-bottom: 15px;
     margin-top: 15px;
     color: #8d6669;
-   
+
 }
 
-.p2{
+.p3 {
     margin-bottom: 15px;
     margin-top: 15px;
-    color:#8d6669;
-   
+    color: #8d6669;
+
 }
-.p1{
+
+.p2 {
     margin-bottom: 15px;
     margin-top: 15px;
-    color:#8d6669;
+    color: #8d6669;
+
+}
+
+.p1 {
+    margin-bottom: 15px;
+    margin-top: 15px;
+    color: #8d6669;
 }
 
 .dropbtn {
@@ -511,35 +516,38 @@ nav {
     color: #8d6669;
     font-size: 13px;
     border: none;
-  }
-  
-  .dropdown {
+}
+
+.dropdown {
     position: relative;
     display: inline-block;
 
-  }
-  
-  .dropdown-content {
+}
+
+.dropdown-content {
     display: none;
     position: absolute;
     background-color: #f1f1f1;
     min-width: 120px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
     font-size: 10px;
-  }
-  
-  .dropdown-content a {
-    color:#8d6669;
+}
+
+.dropdown-content a {
+    color: #8d6669;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     font-size: 10px;
-  }
-  
-  .dropdown-content a:hover {background-color: #ddd;}
-  
-  .dropdown:hover .dropdown-content {display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 
 }
 
@@ -547,28 +555,31 @@ table {
     border-collapse: collapse;
     width: 100%;
     margin: 10px auto;
-    max-height: 100px;/*  Adjust this value to fit the available space */
+    max-height: 100px;
+    /*  Adjust this value to fit the available space */
     overflow-y: auto;
-  }
-  
-  th, td {
+}
+
+th,
+td {
     text-align: center;
     padding: 12px;
-  }
-  
-  th {
+}
+
+th {
     background-color: #8d6669;
     color: white;
-  }
-  
-  tr:nth-child(even) {
+}
+
+tr:nth-child(even) {
     background-color: #f2f2f2;
-  }
-  
-  a {
+}
+
+a {
     color: #8d6669;
-  }
-  .box1 {
+}
+
+.box1 {
     margin-top: 250px;
     width: 290px;
     height: 260px;
@@ -582,29 +593,28 @@ table {
     padding: 20px;
     text-align: center;
     overflow-x: auto;
-  }
-  
-  table {
+}
+
+table {
     width: 100%;
     border-collapse: collapse;
-  }
-  
-  th, td {
+}
+
+th,
+td {
     text-align: center;
     padding: 8px;
-  }
-  
-  th {
+}
+
+th {
     background-color: #4CAF50;
     color: #fff;
-  }
-  
-  tr:nth-child(even) {
+}
+
+tr:nth-child(even) {
     background-color: #f2f2f2;
-  }
-  
-  a {
+}
+
+a {
     color: #4CAF50;
-  }
-  
-  
+}
